Always overwrite QPixmap data on loadFromData

Reusing the previous QPlatformPixmap breaks implicit sharing. It changes
the contents for all QPixmaps using the sample QPlatformPixmap.

Task-number: QTBUG-43384
Change-Id: Ic0792088daa8c2dcb5d7d311a0fd7415d7b5e097
Reviewed-by: Liang Qi <liang.qi@theqtcompany.com>

cregit: 5c2df051cdf8768424fe250bec99b67844df9a36 https://github.com/qt/qtbase/commit/5c2df051cdf8768424fe250bec99b67844df9a36